# The-keginator

./: .env  README.md  package-lock.json  package.json  pages - Shortcut.lnk  tailwind.config.js
backend/: .env  check_balance.py  generate_solana_keypair.py  keginator.db  pair.py  render.yaml  requirements.txt
backend/app/: audio_processor.py  auth.py  blockchain.py  cleaning.py  command.txt  database.py  main.py  models.py
backend/cleaned/: 19a15706-9f18-46e8-a8e9-b5d6768c4774_cleaned.csv  2cb17122-fbec-4e5f-9679-1224d3a0877e_cleaned.csv  a1d69514-d89f-477b-9a8f-0e64f23676d1_cleaned.csv  cust_41e1d830_cleaned.csv  empl_5f9a2518_cleaned.csv  gen_ML.csv  gen_TEXT.csv  jane_39f47a27_cleaned.csv  jane_ML.csv  jane_TEXT.csv  jane_eab267d4_cleaned.csv  me_44a89208_cleaned.csv
backend/cli/: cleaned_test_upload.csv  keginator_cli.py  requirements.txt  test_upload.csv
backend/solana-program/: Anchor.toml  Cargo.toml
backend/solana-program/programs/keginator/src/: lib.rs
public/: index.html  manifest.json
src/: App.tsx
src/components/layout/: Footer.tsx  Header.tsx  MobileBottomNav.tsx
src/components/ui/: AnimatedCard.tsx  FileUpload.tsx  Terminal.tsx  ThemeToggle.tsx
src/hooks/: useApi.ts  useAuth.ts  useScrollToTop.ts  useTheme.ts
src/pages/: Auth.tsx  Dashboard.tsx  History.tsx  Home.tsx  Info.tsx  Pricing.tsx  Settings.tsx  Upload.tsx  Verify.tsx
src/styles/: csss.txt  globals.css
src/types/: index.ts
src/utils/: constants.ts
