# solana-program/Cargo.toml
[package]
name = "keginator"
version = "0.1.0"
description = "Keginator - Data cleaning proof on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "keginator"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"

[dev-dependencies]
solana-program-test = "1.17.0"
